--- a/albums.html
+++ b/albums.html
@@ -13,7 +13,7 @@
     <li id = "album" ><a href="albums.html">Album</a></li>
     <li><a href="home.html">Home</a></li>
     <li><a href="tour.html">Tours</a></li>
-    <li><a href="links.html">Links</a></li>
+    <li><a href="links.html">yours</a></li>
   </ul>
 	<img src = "https://upload.wikimedia.org/wikipedia/en/b/b6/I_Think_You_Think_Too_Much_Of_Me_Album_Cover%2C_July_2016.jpg" alt ="I think youthink too much of me album" class ="album" id= "toomuch" onclick="myfunction()">
 	<img src = "https://static.ising.pl/songs/23311/cover_640.jpg" alt ="wake up album" class ="album" id= "wake" onclick="myfunction2()">
