--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
 	<title> Eden/Home </title>
 	<link rel="stylesheet" href="CSS/stylehome.css" type ="text/css">
-	<script type ="text/javascript" src="js/homejava.html"></script>
+	
 </head>
 <body>
 	<img src="assets/banner.png" alt = "Eden Banner"  id = "banner">
@@ -13,7 +13,7 @@
     <li id = "album" ><a href="albums.html">Album</a></li>
     <li><a href="home.html">Home</a></li>
     <li><a href="tour.html">Tours</a></li>
-    <li><a href="links.html">Links</a></li>
+    <li><a href="links.html">yours</a></li>
   </ul>
 
 	
