--- a/video.html
+++ b/video.html
@@ -2,8 +2,9 @@
 <html>
 		
 <head>
-	<title> Eden/Home </title>
-	<link rel="stylesheet" href="CSS/styletour.css" type ="text/css">
+	<title> Eden/video </title>
+	<link rel="stylesheet" href="CSS/video.css" type ="text/css">
+	
 </head>
 <body>
 	<img src="assets/banner.png" alt = "Eden Banner"  id = "banner">
@@ -14,7 +15,6 @@
     <li><a href="tour.html">Tours</a></li>
     <li><a href="links.html">yours</a></li>
   </ul>
-	
-	<img src="https://pbs.twimg.com/media/DOS1qNBXcAAlmUT.jpg" alt= "Tour dates" id = "dates">
-	 <h1><a href= "video.html">features of website </a></h1>
-<body>
+  <video width="320" height="240" controls>
+  <source src="video/video.mp4" type="video/mp4">
+  </video>
