--- a/home.html
+++ b/home.html
@@ -3,12 +3,19 @@
 		
 <head>
 	<title> Eden/Home </title>
+	<!-- links style sheet --> 
+
+
 	<link rel="stylesheet" href="CSS/stylehome.css" type ="text/css">
 	
 </head>
 <body>
+<!-- banner at the top of the page --> 
+
 	<img src="assets/banner.png" alt = "Eden Banner"  id = "banner">
 	<nav class="nav" role="navigation">
+	<!-- links to other pages --> 
+
   <ul class="nav-list">
     <li id = "album" ><a href="albums.html">Album</a></li>
     <li><a href="home.html">Home</a></li>
@@ -17,7 +24,8 @@
   </ul>
 
 	
-		    
+		    <!-- slider holds all stuff in it--> 
+
  <div class="slider-holder">
         <span id="slider-image-1"></span>
         <span id="slider-image-2"></span>
