--- a/tour.html
+++ b/tour.html
@@ -2,19 +2,24 @@
 <html>
 		
 <head>
-	<title> Eden/Home </title>
+	<title> Eden/tour </title>
+	<!-- links style sheet --> 
+
 	<link rel="stylesheet" href="CSS/styletour.css" type ="text/css">
 </head>
 <body>
+<!-- banner at the top of the page --> 
 	<img src="assets/banner.png" alt = "Eden Banner"  id = "banner">
 	<nav class="nav" role="navigation">
   <ul class="nav-list">
+  	<!-- links to other pages --> 
+
     <li id = "album" ><a href="albums.html">Album</a></li>
     <li><a href="home.html">Home</a></li>
     <li><a href="tour.html">Tours</a></li>
     <li><a href="links.html">yours</a></li>
   </ul>
-	
+	<!-- image  --> 
 	<img src="https://pbs.twimg.com/media/DOS1qNBXcAAlmUT.jpg" alt= "Tour dates" id = "dates">
 	 <h1><a href= "video.html">features of website </a></h1>
 <body>
